--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,10 @@
 <!-- <app-topic1></app-topic1> -->
 <!-- <app-topic2></app-topic2> -->
 <!-- <app-topic3></app-topic3> -->
-<app-topic4></app-topic4>
+<!-- <app-topic4></app-topic4> -->
 <!-- <app-topic5></app-topic5> -->
+
+<app-topic6>
+  <app-content></app-content>
+  <h2>Again a header</h2>
+</app-topic6>
