--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,9 @@
 <!-- <app-topic4></app-topic4> -->
 <!-- <app-topic5></app-topic5> -->
 
-<app-topic6>
+<!-- <app-topic6>
   <app-content></app-content>
   <h2>Again a header</h2>
-</app-topic6>
+</app-topic6> -->
+
+<app-topic7 [prop]="field" (customEvent)="parentHandler($event)"></app-topic7>
